[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/player/player_fsm.gd" type="Script" id=2]
[ext_resource path="res://scripts/player/player.gd" type="Script" id=3]
[ext_resource path="res://scripts/player/states/run_state.gd" type="Script" id=5]
[ext_resource path="res://scripts/player/states/idle_state.gd" type="Script" id=6]
[ext_resource path="res://scripts/player/states/walk_state.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerFSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="IdleState" type="Node" parent="PlayerFSM"]
script = ExtResource( 6 )

[node name="WalkState" type="Node" parent="PlayerFSM"]
script = ExtResource( 7 )

[node name="RunState" type="Node" parent="PlayerFSM"]
script = ExtResource( 5 )

[connection signal="switch_to" from="PlayerFSM/IdleState" to="PlayerFSM" method="_on_PlayerFSM_switch_to"]
[connection signal="switch_to" from="PlayerFSM/WalkState" to="PlayerFSM" method="_on_PlayerFSM_switch_to"]
[connection signal="switch_to" from="PlayerFSM/RunState" to="PlayerFSM" method="_on_PlayerFSM_switch_to"]
